2003-08-13  JP Rosevear  <jpr@ximian.com>

	* cal-client/cal-client.c (real_open_calendar): set the priv->cal
	pointer in a slightly different spot so we have it in the call
	back

	* gui/e-cal-model.c (e_cal_model_get_client_list): merge this in
	properly

2003-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-week-view-event-item.c (e_week_view_event_item_draw): draw
	a filled rectangle and a black border around it for one-day events.

	* gui/e-day-view-top-item.c (e_day_view_top_item_draw_long_event):
	fill the rectangle for the item with its associated color.

2003-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.c (gnome_calendar_open): unref the client if there
	is an error.
	(update_query): set status bar messages for progress.
	(update_query_timeout): re-enabled.
	(client_cal_opened_cb): install timeout handler for the query updates.

	* gui/e-cal-view.c (e_cal_view_set_model): connect to all appropriate
	signals on the model, to be called for every change.
	(model_row_changed_cb, model_rows_changed_cb): new model callbacks.

	* gui/e-week-view-event-item.c (e_week_view_event_item_draw): colorize
	the background for multiple days events.
	
2003-08-13  JP Rosevear  <jpr@ximian.com>

	* cal-client/client-test.c (create_client): there is no more
	object updated signal

	* cal-client/cal-listener.c: clean up comment

	* cal-client/cal-client.c (cal_client_class_init): remove
	obj_updated and obj_removed signals

	* cal-client/cal-client.h: ditto
	
2003-08-12  JP Rosevear  <jpr@ximian.com>

	* pcs/cal-backend.h: remove get_uri vmethod

	* pcs/cal-backend.c (cal_backend_class_init): remove get_uri
	vmethod init

	* pcs/cal-backend-file.c (cal_backend_file_class_init): no longer
	a get uri vmethod
	(cal_backend_file_get_uri): remove implementation of above

2003-08-12  JP Rosevear  <jpr@ximian.com>
	
	* cal-client/client-test.c (main): use tmp uris

	* cal-client/cal-listener.h: update protos
